存一下进度

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -8,8 +8,8 @@ html {
     display: none;
 }
 
-body {
-    overflow-y: overlay;
+body, .overlay {
+    overflow: overlay;
 }
 
 ::-webkit-scrollbar {
