--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,6 +3,7 @@
 @import "utilties.css";
 @import "window.css";
 @import "table.css";
+@import "daypicker.css";
 
 @import "react-toastify/dist/ReactToastify.css";
 
